--- a/css/style.css
+++ b/css/style.css
@@ -3870,7 +3870,7 @@ body {
 
   .menu__body {
     position: fixed;
-    right: -100%;
+    right: 0;
     top: 0;
     width: 100%;
     height: 100%;
